2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: added
	  tooltip support for aggregated resolve results.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed "Bug
	  474149 - Context menu shows incorrect overload".

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DefaultFormatter.cs: default
	  formatter now accounts eol policies.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor.addin.xml:
	* MonoDevelop.SourceEditor/DefaultFormatter.cs: Added default
	  formatter that uses text policy settings.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed "Bug
	  474055 - no parameters hints on first parameter when "Insert
	  Matching Brace" is enabled".

2009-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs: Fix
	  null ref.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.csproj: Remove more inadvertent
	  local copying of references.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.csproj: Don't local-copy other
	  addins' dlls.

2009-02-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor/HighlightPropertiesSemanticRule.cs:
	  Fixed compiler warnings.

2009-02-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Remove
	  unnecessary completion context event filtering.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.mdp:
	* MonoDevelop.SourceEditor.csproj: Migrated to MSBuild file
	  format.

2009-02-05  Michael Hutchinson  <mhutchinson@novell.com>
