@@ -1,3 +1,9 @@
+2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.SourceEditor/DefaultFormatter.cs: Fix NRE when
+	  there is no policy parent. Fixes creation of files not
+	  attached to projects.
+
 2009-02-11  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: added
